--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: ; Choose 3 fonts style for the font family (Arial, Helvetica...)*/
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 
 body {
     min-height: 100vh;
-    /* background: choose your own background color */
+    background: #purple;   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,7 +18,7 @@ body {
 
 .container {
     width: 100%;
-    /* max-width: ; choose the max width of tyour container*/
+max-width: 300px
     text-align: center;
     padding: 30px 20px;
 }
@@ -42,7 +42,7 @@ h1 {
 
 
 .bio {
-    /* font-size: ; modify the font size to be different from h1*/
+    font-size: 12px
     opacity: 0.85;
     margin-bottom: 25px;
 }
@@ -56,10 +56,9 @@ h1 {
 
 
 .link-btn {
-    /* background: change the bacground color; */
-    border-radius: 10px;
-    /* padding: ; choose a padding dimension
-    /!\ there are 2 dimensions !!*/
+background: #purple;
+border-radius: 10px;
+ padding: 2px 10px  
     text-decoration: none;
     /* color: ; change the color */
     font-weight: bold;
@@ -73,9 +72,8 @@ h1 {
 }
 
 .link-btn img {
-    /* width: ;
-    height: ;
-    Choose a size of image (note : should ba a square so x = y) */
+    width: 20px;
+    height: 20px ;
 }
 
 .link-btn:hover {
